# ai-digest-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: cost-optimizer.md  fetcher-builder.md  migration-runner.md  notion-debugger.md  prompt-tuner.md  scoring-evaluator.md
.github/workflows/: bot-polling.yml  ci.yml  daily-digest.yml  monthly-landscape.yml  sync-projects.yml  weekly-brief.yml
docs/: migration_to_anthropic.md  notion_setup.md  sample_run.md  spec.md
scripts/: rescore.py  run_pipeline_once.py  seed.py  send_test_digest.py  sync_projects.py
src/bot/: keyboards.py  main.py
src/bot/handlers/: callbacks.py  chat.py  commands.py
src/shared/: config.py  db.py  logging.py  models.py  notion_sync.py
src/shared/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  groq_client.py
src/shared/prompts/: __init__.py  action_plan.md  chat.md  deep_dive.md  extract_prefs.md  monthly.md  score.md  weekly.md
src/worker/: digest_builder.py  digest_sender.py  monthly_landscape.py  pipeline.py  pre_filter.py  scoring.py  trend_tracker.py  weekly_brief.py
src/worker/fetchers/: __init__.py  _common.py  github_trending.py  hf_papers.py  html_generic.py  rss.py  telegram_web.py
supabase/migrations/: 0001_init.sql
tests/: conftest.py  test_db_helpers.py  test_digest_builder.py  test_digest_sender.py  test_notion_parser.py  test_pre_filter.py  test_scoring_models.py  test_telegram_parser.py
tests/fixtures/: notion_full.json  notion_missing_block.json  notion_sloppy.json
